[package]
name = "nft_staking_contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.10.14"
thiserror = "1.0.30"
arrayref = "0.3.6"
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.5", features = ["no-entrypoint"] }
metaplex-token-metadata = {  version = "0.0.1", features = ["no-entrypoint"] }


[lib]
crate-type = ["cdylib", "lib"]